fix visual bug with cards shifting

--- a/src/components/FormContainer.css
+++ b/src/components/FormContainer.css
@@ -46,5 +46,5 @@ input[type="text"] {
 
 .error-text {
     color: #eb4242;
-    font-size: 18px;
+    font-size: 305px;
 }
