--- a/src/components/PriorityColumn.css
+++ b/src/components/PriorityColumn.css
@@ -1,14 +1,29 @@
 .column {
-    padding: 15px;
-    flex-basis: 33%;
     background-color: #fff;
-    border-right: 1px solid #e5e5e5;
+    flex-basis: 33%;
+    padding: 7px;
 }
 
 .header {
     display: flex;
     justify-content: center;
     margin-bottom: 15px;
+    padding: 15px;
+    border-radius: 5px;
+    margin: 15px auto;
+    box-sizing: border-box;
+}
+
+.header-high {
+    background: linear-gradient(102.2deg, rgb(250, 45, 66) 9.6%, rgb(245, 104, 104) 96.1%);
+}
+
+.header-medium {
+    background: linear-gradient(109.6deg, rgb(255, 207, 84) 11.2%, rgb(255, 158, 27) 91.1%);
+}
+
+.header-low {
+    background: radial-gradient(circle at 10% 20%, rgb(254, 255, 165) 0%, rgb(255, 232, 182) 90%);
 }
 
 .title {
@@ -21,7 +36,7 @@
 
 h1 {
     text-align: center;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: bold;
     margin-bottom: 10px;
 }
