--- a/src/components/TaskCard.css
+++ b/src/components/TaskCard.css
@@ -8,7 +8,6 @@
     gap: 2px;
     color: #3c4043;
     cursor: pointer;
-    transition: 100ms;
 }
 
 .task-card:active {
@@ -18,12 +17,12 @@
 
 h3 {
     text-align: center;
-    font-size: 25px;
+    font-size: 18px;
     font-weight: bold;
 }
 
 p {
-    font-size: 16px;
+    font-size: 15px;
     margin-bottom: 10px;
     line-height: 1.5;
     text-align: center;
